--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-*.claude/
-*cursor/
-*playwright-mcp/
-*.mcp.json
+.claude/
+.cursor/
+.playwright-mcp/
+.mcp.json
 docs/
+# Environment variables and secrets
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 *.env
+**/secrets/**
+STRIPE_DASHBOARD_SETUP.md
