--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,5 +1,5 @@
 project_id = "tofckkpzdbcplxkgxcsr"
 
 # Disable JWT verification for Stripe webhooks - allows Stripe to call the webhook without authentication
-[functions.stripe-webhook-public]
+[functions.stripe-webhook]
 verify_jwt = false
